--- a/index.html
+++ b/index.html
@@ -10,66 +10,40 @@
 <!--     <script src="/simile/timeline_js/timeline-api.js?bundle=true" -->
 <!-- 	type="text/javascript"></script> -->
 
-
 	<style>
 		body {
-			padding-top: 20px;
-			padding-bottom: 70px;
+			padding-top: 70px;
+			padding-bottom: 20px;
 		}
 	</style>
-	<script>
-
-	function afficher(){
-		var file = document.getElementById("fileForUpload").files[0];
-		if (file) {
-		    var reader = new FileReader();
-		    reader.readAsText(file, "UTF-8");
-		    reader.onload = function (evt) {
-		        document.getElementById("fileContents").innerHTML = evt.target.result;
-		    }
-		    reader.onerror = function (evt) {
-		        document.getElementById("fileContents").innerHTML = "error reading file";
-		    }
-		}
-	}
-
-	function sauver(){
-		var json = "{event:'pipoéé'}";
-		var dataURI = 'data:application/json;charset=utf-8,' + encodeURIComponent(json);
-		console.log(json);
-		console.log(dataURI);
-		window.open(dataURI,'_blank');
-	}
-
-	</script>
 
 </head>
 <body>
-	<nav class="navbar navbar-default navbar-fixed-bottom">
+	<nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container">
 	    <ul class="nav navbar-nav navbar-left" ng-controller="NavbarController">
 			<li><a href="#welcome">{{ 'TITLE' | translate }}</a></li>
 			<li><a href="#add">{{ 'ADD' | translate }}</a></li>
 			<li><a href="#main">{{ 'MAP' | translate }}</a></li>
 			<li><a href="#list">{{ 'LIST' | translate }}</a></li>
-			<li><a download ng-click="save();">{{ 'SAVE' | translate }}</a></li>
-			<li><a ng-click="empty();">{{ 'FLUSH' | translate }}</a></li>
+			<li><a href ng-click="save();">{{ 'SAVE' | translate }}</a></li>
+			<li><a href ng-click="empty();">{{ 'FLUSH' | translate }}</a></li>
 
 		</ul>
 		<ul class="nav navbar-nav navbar-right" ng-controller="LocaleController">
-			<li><a ng-click="changeLanguage('en')">en</a></li>
-			<li><a ng-click="changeLanguage('fr')">fr</a></li>
-			<li class="dropdown">
+			<li><a href ng-click="changeLanguage('en')">en</a></li>
+			<li><a href ng-click="changeLanguage('fr')">fr</a></li>
+			<!--		<li class="dropdown">
 				<a  class="dropdown-toggle" data-toggle="dropdown">
 					{{ 'LANGUAGE' | translate }}<span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu" role="menu">
 					<li><a ng-click="changeLanguage('en')">English</a></li>
 					<li><a ng-click="changeLanguage('fr')">Français</a></li>
-					<li><a ng-click="changeLanguage('de')">Deutsch</a></li>
+				  <li><a ng-click="changeLanguage('de')">Deutsch</a></li>
 					<li><a ng-click="changeLanguage('es')">Español</a></li>
 				</ul>
-			</li>
+			</li> -->
 		</ul>
 	  </div>
 	</nav>
@@ -77,8 +51,6 @@
 		<div class="ng-view"></div>
 
 	</div>
-
-
 
 	<!-- scripts -->
 
