--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 					<li><a href="#add">{{ 'ADD' | translate }}</a></li>
 					<li><a href="#main">{{ 'MAP' | translate }}</a></li>
 					<li><a href="#list">{{ 'LIST' | translate }}</a></li>
-					<li><a href ng-click="save();">{{ 'SAVE' | translate }}</a></li>
-					<li><a target="_blank" download="traj.json" href="data:application/json;charset=utf-8,{{traj|json|urlencode}}" >{{ 'SAVE' | translate }} Bis</a></li>
+					<!-- <li><a href ng-click="save();">{{ 'SAVE' | translate }}</a></li> -->
+					<li><a target="_blank" download="traj.json" href="data:application/json;charset=utf-8,{{traj|json|urlencode}}" >{{ 'SAVE' | translate }}</a></li>
 					<li><a href ng-click="empty();">{{ 'FLUSH' | translate }}</a></li>
-
+					<li><a><span class="label label-primary">{{ traj.length }} {{ 'EVENTS' | translate }}</span></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="LocaleController">
 					<li><a href ng-click="changeLanguage('en')">en</a></li>
@@ -86,5 +86,17 @@
 
 	<!-- application code -->
 	<script src="code-js/traj.js"></script>
+
+
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-59333588-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
 </body>
 </html>
