--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
 					<li><a href="#main">{{ 'MAP' | translate }}</a></li>
 					<li><a href="#list">{{ 'LIST' | translate }}</a></li>
 					<!-- <li><a href ng-click="save();">{{ 'SAVE' | translate }}</a></li> -->
-					<li><a target="_blank" download="traj.json" href="data:application/json;charset=utf-8,{{allAsJson()}}" >{{ 'SAVE' | translate }}</a></li>
+					<li><a target="_blank" download="traj.json" href="{{allAsDataURL()}}" >{{ 'SAVE' | translate }}</a></li>
 					<li><a href ng-click="empty();">{{ 'FLUSH' | translate }}</a></li>
-					<li><a href ng-click="shareAll();">{{ 'SHARE' | translate }}</a></li>
+					<!-- <li><a href ng-click="shareAll();">{{ 'SHARE' | translate }}</a></li> -->
+					<li><a href="#shareAll">{{ 'SHARE' | translate }}</a></li>
 					<li><a><span class="label label-primary">{{ numberOfEvents() }} {{ 'EVENTS' | translate }}</span></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="LocaleController">
-					<li><a href ng-click="changeLanguage('en')">en</a></li>
-					<li><a href ng-click="changeLanguage('fr')">fr</a></li>
-					<!--		<li class="dropdown">
+
+						<li class="dropdown">
 						<a  class="dropdown-toggle" data-toggle="dropdown">
 							{{ 'LANGUAGE' | translate }}<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a ng-click="changeLanguage('en')">English</a></li>
-							<li><a ng-click="changeLanguage('fr')">Français</a></li>
-							<li><a ng-click="changeLanguage('de')">Deutsch</a></li>
-							<li><a ng-click="changeLanguage('es')">Español</a></li>
+							<li><a href ng-click="changeLanguage('en')">English</a></li>
+							<li><a href ng-click="changeLanguage('fr')">Français</a></li>
+							<!-- <li><a href ng-click="changeLanguage('de')">Deutsch</a></li>
+							<li><a href ng-click="changeLanguage('es')">Español</a></li> -->
 						</ul>
-					</li> -->
+					</li>
 				</ul>
 				</div><!--/.nav-collapse -->
 			</div>
