--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Traj</title>
 	<meta charset="utf-8">
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+	<link rel="shortcut icon" type="image/png" href="images/traj.png"/>
 	<style>
 		body {
 			padding-top: 70px;
@@ -67,7 +67,7 @@
 
 	<script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-
+	<script src="libs/markerclusterer.js"></script>
 	<script src="libs/jquery-1.11.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="libs/jquery-ui.js"></script>
