--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 	<script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script src="libs/markerclusterer.js"></script>
+	<!-- <script src="libs/markerclusterer.js"></script>  -->
 	<script src="libs/jquery-1.11.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="libs/jquery-ui.js"></script>
