Change to markers in the mapline script
separated mapline script for things related to map
new example on Darwin

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 	<script src="code-js/traj-service-events.js"></script>
 	<script src="code-js/traj-i18n.js"></script>
 	<script src="code-js/traj.js"></script>
+	<script src="code-js/traj-mapline.js"></script>
 
 
 	<script>
