Way too big commit
Added validation on add form
Added toastr
More I18n
Played with colors on mapline
Moved samples to folder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Traj</title>
 	<meta charset="utf-8">
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="libs/toastr.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="images/traj.png"/>
 	<style>
 		body {
@@ -79,6 +80,7 @@
 	<script src="libs/angular-spinner.js"></script>
 	<script src="libs/ui-bootstrap-tpls-0.12.0.js"></script>
 	<script src="libs/angular-locale_fr-fr.js"></script>
+	<script src="libs/toastr.js"></script>
 	<script src="libs/lz-string.js"></script>
 
 	<!-- application code -->
