Addition of AngularTics for analytics

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
 	<script src="libs/angular-spinner.js"></script>
 	<script src="libs/ui-bootstrap-tpls-0.12.0.js"></script>
 	<script src="libs/angular-locale_fr-fr.js"></script>
+
+	<script src="libs/angulartics.min.js"></script>
+	<script src="libs/angulartics-ga.min.js"></script>
+
 	<script src="libs/toastr.js"></script>
 	<script src="libs/lz-string.js"></script>
 
@@ -97,7 +101,7 @@
 		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-59333588-1', 'auto');
-		ga('send', 'pageview');
+		//ga('send', 'pageview');
 
 	</script>
 </body>
