Consistent save behaviour
Removed the chrome save behaviour so it is consistent

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li ng-hide="numberOfEvents()==0" ><a href="#main">{{ 'MAP' | translate }}</a></li>
 					<li ng-hide="numberOfEvents()==0" ><a href="#list">{{ 'LIST' | translate }}</a></li>
 					<!-- <li><a href ng-click="save();">{{ 'SAVE' | translate }}</a></li> -->
-					<li ng-hide="numberOfEvents()==0" ><a target="_blank" download="traj.json" href="{{allAsDataURL()}}" >{{ 'SAVE' | translate }}</a></li>
+					<li ng-hide="numberOfEvents()==0" ><a target="_blank" href="{{allAsDataURL()}}" >{{ 'SAVE' | translate }}</a></li>
 					<li ng-hide="numberOfEvents()==0" ><a href ng-click="empty();">{{ 'FLUSH' | translate }}</a></li>
 					<!-- <li><a href ng-click="shareAll();">{{ 'SHARE' | translate }}</a></li> -->
 					<li ng-hide="numberOfEvents()==0" ><a href="#shareAll">{{ 'SHARE' | translate }}</a></li>
