--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<li><a><span class="label label-primary">{{ numberOfEvents() }} {{ 'EVENTS' | translate }}</span></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="LocaleController">
-
+						<li><a href="#infos">{{ 'ABOUT' | translate }}</a></li>
 						<li class="dropdown">
 						<a  class="dropdown-toggle" data-toggle="dropdown">
 							{{ 'LANGUAGE' | translate }}<span class="caret"></span>
@@ -49,8 +49,11 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href ng-click="changeLanguage('en')">English</a></li>
 							<li><a href ng-click="changeLanguage('fr')">Français</a></li>
-							<!-- <li><a href ng-click="changeLanguage('de')">Deutsch</a></li>
-							<li><a href ng-click="changeLanguage('es')">Español</a></li> -->
+
+							<li><a href ng-click="changeLanguage('es')">Español</a></li>
+							<!--
+							<li><a href ng-click="changeLanguage('de')">Deutsch</a></li>
+							 -->
 						</ul>
 					</li>
 				</ul>
